[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/start_menu/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/start_menu/wide_car.png" type="Texture" id=2]
[ext_resource path="res://ui/start_menu/Blur.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/fonts/extra_large_menu_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/fonts/large_menu_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/start_menu/white.png" type="Texture" id=6]
[ext_resource path="res://ui/start_menu/Menu - Mario Kart Super Circuit [OST].ogg" type="AudioStream" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

var time = 0

var fliptime = 0.1

 #Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	time += delta
	
	if time > fliptime:
		if self.text.ends_with(\"...\"):
			self.text = \"Loading\"
		else:
			self.text += \".\"
		#print(self.text)
		time = 0
	
"

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WideCar" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Blur" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Title" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameTitleLabel" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 4 )
text = "Continyoom"
align = 1
valign = 1

[node name="Play" type="Button" parent="Title"]
anchor_left = 0.5
anchor_top = 0.803
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = 0.199982
margin_right = 165.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 5 )
text = "Play"
flat = true

[node name="Quit" type="Button" parent="Title"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 360.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../Play")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Quit"
flat = true

[node name="CCSelect" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TrackSelectLabel" type="Label" parent="CCSelect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 4 )
text = "Speed Select"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CCSelect"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TooFast" type="Button" parent="CCSelect/VBoxContainer"]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 5 )
text = "Too Fast"
flat = true

[node name="Separator" type="Control" parent="CCSelect/VBoxContainer"]
margin_top = 187.0
margin_right = 1024.0
margin_bottom = 207.0
rect_min_size = Vector2( 0, 20 )

[node name="Fast" type="Button" parent="CCSelect/VBoxContainer"]
margin_top = 211.0
margin_right = 1024.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 5 )
text = "Fast"
flat = true

[node name="Separator2" type="Control" parent="CCSelect/VBoxContainer"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 20 )

[node name="NotSoFast" type="Button" parent="CCSelect/VBoxContainer"]
margin_top = 296.0
margin_right = 1024.0
margin_bottom = 353.0
custom_fonts/font = ExtResource( 5 )
text = "Not So Fast"
flat = true

[node name="TrackSelect" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TrackSelectLabel" type="Label" parent="TrackSelect"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 4 )
text = "Track Select"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TrackSelect"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="RainbowRoad" type="Button" parent="TrackSelect/VBoxContainer"]
margin_left = 142.0
margin_top = 169.0
margin_right = 881.0
margin_bottom = 226.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../TrackUno")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Rainbow Road"
flat = true

[node name="Separator" type="Control" parent="TrackSelect/VBoxContainer"]
margin_top = 230.0
margin_right = 1024.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 20 )

[node name="TrackUno" type="Button" parent="TrackSelect/VBoxContainer"]
margin_left = 228.0
margin_top = 254.0
margin_right = 796.0
margin_bottom = 311.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../RainbowRoad")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../Back")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Track Uno"
flat = true

[node name="CarSelect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CarSelectLabel" type="Label" parent="CarSelect"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 4 )
text = "Car Select"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CarSelect"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="DefaultKart" type="Button" parent="CarSelect/VBoxContainer"]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 183.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../ModelB")
focus_next = NodePath(".")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 5 )
text = "Default Kart"
flat = true

[node name="Sep" type="Control" parent="CarSelect/VBoxContainer"]
margin_top = 187.0
margin_right = 1024.0
margin_bottom = 207.0
rect_min_size = Vector2( 0, 20 )

[node name="ModelB" type="Button" parent="CarSelect/VBoxContainer"]
margin_top = 211.0
margin_right = 1024.0
margin_bottom = 268.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../DefaultKart")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../Back")
focus_next = NodePath(".")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 5 )
text = "Cybertruck"
flat = true

[node name="Sep3" type="Control" parent="CarSelect/VBoxContainer"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 20 )

[node name="CarUno" type="Button" parent="CarSelect/VBoxContainer"]
margin_top = 296.0
margin_right = 1024.0
margin_bottom = 353.0
custom_fonts/font = ExtResource( 5 )
text = "Car Uno"
flat = true

[node name="Start" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Start" type="Button" parent="Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -37.0
margin_right = 157.0
margin_bottom = 37.0
focus_neighbour_left = NodePath("../../Back")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../Back")
focus_next = NodePath(".")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 4 )
text = "PLAY"
flat = true

[node name="Back" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 360.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Back"
flat = true

[node name="BlackScreen" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="LoadingAnimation" type="Control" parent="BlackScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Loading" type="Label" parent="BlackScreen/LoadingAnimation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.855
margin_top = -25.0
margin_right = 106.145
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
text = "Loading"
script = SubResource( 1 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "MenuBus"
[connection signal="pressed" from="Title/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Title/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CCSelect/VBoxContainer/TooFast" to="." method="_on_TooFast_pressed"]
[connection signal="pressed" from="CCSelect/VBoxContainer/Fast" to="." method="_on_Fast_pressed"]
[connection signal="pressed" from="CCSelect/VBoxContainer/NotSoFast" to="." method="_on_NotSoFast_pressed"]
[connection signal="pressed" from="TrackSelect/VBoxContainer/RainbowRoad" to="." method="_on_RainbowRoad_pressed"]
[connection signal="pressed" from="TrackSelect/VBoxContainer/TrackUno" to="." method="_on_TrackUno_pressed"]
[connection signal="pressed" from="CarSelect/VBoxContainer/DefaultKart" to="." method="_on_DefaultKart_pressed"]
[connection signal="pressed" from="CarSelect/VBoxContainer/ModelB" to="." method="_on_ModelB_pressed"]
[connection signal="pressed" from="CarSelect/VBoxContainer/CarUno" to="." method="_on_CarUno_pressed"]
[connection signal="pressed" from="Start/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
